Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2201

Ternary operator returns different types (build error for some compilers)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 0.9.2
    • None
    • All

    • Patch Available

    Description

      The ruby and java generators use the ternary operator in spots where the true and false expressions return different types. This is a compile error for some compilers (VC12 in particular). The attached patch repairs this.

      Attachments

        Activity

          People

            codesf Randy Abernethy
            codesf Randy Abernethy
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: