THRIFT-2201: Ternary operator returns different types (build error for some compilers) Client: java compiler, ruby compiler Patch: Randy Abernathy